# NEXUS-R

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CAPABILITIES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  INVESTOR.md  LICENSE  Makefile  README.md  SECURITY.md  app_js_logs.txt  backend_readiness_audit 31_5.md  chat-Audit of Implementation Plan.txt  desktop.ini  docker-compose.yml  nginx.conf
nexus-r/: .gitignore  .validation_freeze.json  README.md  api_test_results.json  append_css.py  architecture_review_phase1.md  backend_test.py  benchmark_baseline_report.md  benchmark_report_phase1.md  concurrency-risk-report.md  debug_js.py  final_operational_assessment.md  final_operational_assessment_phase2_ready.md  final_validation_report.md  fresh_user_experience_report.md  known_limitations_phase1.md  persistence-redesign-proposal.md  pyproject.toml  pytest.ini  recommended_phase2_changes.md  recovery-architecture-proposal.md  recovery_validation_report.md  release_readiness_review.md  replace_html.py  reproducibility_report.md  runtime_stability_report.md  runtime_truthfulness_report_phase1_5.md  runtime_truthfulness_report_phase2.md  scalability_risk_report.md  security_audit_phase1.md  security_boundary_report.md  session-runtime-failure-report.md  sitecustomize.py  start_backend.py  take_screenshot.py  take_screenshot2.py  technical_debt_phase1.md  test.json  test_app.js  test_buttons.py  (+9 more)
nexus-r/.concurrency-stress-v2/: identity.key
nexus-r/.long-running-validation/: notes_12.txt
nexus-r/.long-soak/: soak_metrics.csv
nexus-r/docs/: concurrency_scaling_report.md  cost_dashboard_deployment.md  eventstore_scaling_report.md  failure_telemetry_report.md  phase2_stabilization_change_report.md  phase2_stabilization_handoff.md  phase2_validation_summary.md  provider_failure_report.md  recovery_validation_report.md  sandbox_boundary_report.md  sqlite_resilience_report.md  test_environment_recovery.md
nexus-r/foundation/nexus_r/: __init__.py  backend_manager.py  config.py  errors.py  events.py  model_registry.py  telemetry.py
nexus-r/frontend/: README.md  extract_colors.js  index.html  package-lock.json  package.json  playwright.config.ts  refactor_colors.js  tailwind.config.js  update-buttons.cjs  vite.config.ts  vitest.config.ts
nexus-r/frontend/src/: App.tsx  constants.ts  index.css
nexus-r/modules/: __init__.py
nexus-r/modules/cognition_router/: README.md  interface.yaml
nexus-r/modules/execution_sandbox/: README.md  interface.yaml
nexus-r/modules/input_gateway/: README.md  interface.yaml
nexus-r/modules/session_manager/: README.md  interface.yaml
nexus-r/modules/state_core/: README.md  interface.yaml
nexus-r/modules/trust_layer/: README.md  interface.yaml
nexus-r/modules/workflow_engine/: README.md  interface.yaml
nexus-r/nexus_r/: __init__.py  config.py  errors.py  events.py  model_registry.py  routing.py  telemetry.py
nexus-r/nexus_r/memory/: __init__.py  database.py  manager.py  models.py  (+3 more)
nexus-r/scripts/: benchmark_reproducibility.py  concurrency_stress_test.py  concurrency_stress_v2.py  dependency-audit.sh  etd_baseline_measurement.py  etd_cost_reduction_test.py  etd_saturation_test.py  eventstore_growth_validation.py  eventstore_scaling.py  fresh_ux_validation.py  long_running_validation.py  long_session_soak.py  phase1_benchmark.py  phase1_byok_validation.py  phase1_failure_injection.py  phase1_interruption_validation.py  phase1_real_validation.py  phase_c_validation.py  provider_chaos_validation.py  security_boundary_validation.py  session_recovery_validation.py  start_dashboard.py  streaming_stress_test.py
nexus-r/specs/: 00_architecture.md  01_input_gateway.spec.md  02_cognition_router.spec.md  03_execution_sandbox.spec.md  04_state_core.spec.md  05_workflow_engine.spec.md  06_trust_layer.spec.md  07_cost_dashboard.spec.md  99_acceptance_criteria.md
nexus-r/tests/: conftest.py
(+591 files in other folders)
