[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-r"
version = "0.1.0"
description = "Phase 1 implementation of the NEXUS-R agent runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20",
    "chromadb>=0.5.0",
    "fastapi>=0.136",
    "httpx>=0.28",
    "keyring>=25.0",
    "litellm>=1.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "uvicorn>=0.48",
    "playwright>=1.40.0",
    "python-multipart>=0.0.19",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
runtime = ["keyring>=25.0", "litellm>=1.0", "sentence-transformers>=2.2.0"]
vision = ["pillow>=10.0"]

[project.scripts]
nexus = "modules.cli.src.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
nexus_r = "foundation/nexus_r"

[tool.setuptools.packages.find]
where = ["foundation", "."]
include = ["nexus_r*", "modules*"]
