[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-r"
version = "0.1.0"
description = "Phase 1 implementation of the NEXUS-R agent runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20",
    "chromadb>=0.5.0",
    "fastapi>=0.136",
    "httpx>=0.28",
    "keyring>=25.0",
    "litellm>=1.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "uvicorn>=0.48",
    "playwright>=1.40.0",
    "python-multipart>=0.0.19",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
runtime = ["keyring>=25.0", "litellm>=1.0", "sentence-transformers>=2.2.0"]
vision = ["pillow>=10.0"]

[project.scripts]
nexus = "modules.cli.src.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
nexus_r = "foundation/nexus_r"

[tool.setuptools.packages.find]
where = ["foundation", "."]
include = ["nexus_r*", "modules*"]

# ─── Ruff ───
[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "modules/web_ui/src/static",
    ".concurrency-stress*",
    ".etd-baseline-tmp",
    ".long-running-validation",
    ".long-soak",
    ".phase-c",
    "scripts/",
]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "SIM",
    "TCH", "T20", "RET", "SLF", "RUF",
]
ignore = ["T201", "UP040"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["nexus_r", "modules"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── MyPy ───
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["modules/web_ui/src/static", "tests/", "scripts/"]

# ─── Coverage ───
[tool.coverage.run]
source = ["foundation", "modules"]
omit = ["*/tests/*", "*/static/*", "*/scripts/*", "conftest.py"]
branch = true

[tool.coverage.report]
fail_under = 70.0
precision = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ─── Bandit ───
[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B311"]
